@@ -24,7 +24,7 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 	;Name and file
 	Name "Rowe Technology Inc. - Pulse Waves"
-	OutFile "Pulse.Waves.Installer.v.1.4.0.Full.exe"
+	OutFile "Pulse.Waves.Installer.v.1.5.0.Full.exe"
 
 	;Default installation folder
 	InstallDir "$PROGRAMFILES\Rowe Technology Inc\Pulse Waves"
@@ -74,9 +74,9 @@ Var /GLOBAL VERSION_MINOR
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 Section "Core" SecCore
 
-	StrCpy $VERSION_NUM "1.4.0" 
+	StrCpy $VERSION_NUM "1.5.0" 
 	StrCpy $VERSION_MAJOR "1"
-	StrCpy $VERSION_MINOR "4"
+	StrCpy $VERSION_MINOR "5"
 
 	SetOutPath $INSTDIR
 
