@@ -14,8 +14,8 @@
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net451" />
   <package id="MathNet.Numerics" version="3.9.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
-  <package id="OxyPlot.Core" version="1.0.0" targetFramework="net451" />
-  <package id="OxyPlot.Wpf" version="1.0.0" targetFramework="net451" />
+  <package id="OxyPlot.Core" version="2014.1.546" targetFramework="net451" />
+  <package id="OxyPlot.Wpf" version="2014.1.546" targetFramework="net451" />
   <package id="reactiveui" version="6.5.0" targetFramework="net451" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
@@ -25,8 +25,8 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
   <package id="Splat" version="1.6.2" targetFramework="net451" />
-  <package id="System.Data.SQLite" version="1.0.107.0" targetFramework="net451" />
-  <package id="System.Data.SQLite.Core" version="1.0.107.0" targetFramework="net451" />
-  <package id="System.Data.SQLite.EF6" version="1.0.107.0" targetFramework="net451" />
-  <package id="System.Data.SQLite.Linq" version="1.0.107.0" targetFramework="net451" />
+  <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net451" />
+  <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net451" />
+  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net451" />
+  <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net451" />
 </packages>
